        fwrite
        flushinput
        flushoutput

  ** tcpip(): added wrapper to be matlab compatible(ish)

  ** distribute rpc generated files

  ** verify -M option will work on rpcgen

  ** detect if rpc_error functions allow use of const inputs

  ** prefer libtirpc over builtin rpc when detecting vxi11 functionality

  ** add lock functions used on pkg load/unlock to lock .oct files

Summary of important user-visible changes for instrument-control 0.3.1:
-------------------------------------------------------------------

  ** Updated build to allow install on octave 4.4

  ** using polling rather than signal handling to break from instrument reads

  ** insthwinfo() updated to show enabled modules

  ** added initial builtin tests for each instrument

Summary of important user-visible changes for instrument-control 0.3.0:
-------------------------------------------------------------------

  ** SERIAL: allow non standard baudrates in win32

  ** TCP: new functions:
        resolvehost

  ** UDP: new interface with functions for:
        udp
        udp_timeout
        udp_read
        udp_write
        udp_close
        udp_demo

  ** UDP overload functions for: 
        fprintf
        fread
        fwrite
        fclose
        fopen
        get
        set

Summary of important user-visible changes for instrument-control 0.2.3:
-------------------------------------------------------------------

  ** New function:
        instrhwinfo

  ** GPIB: Fix EOI handling

  ** SERIAL: Fix display of bytesize setting
  
  ** SERIAL: Win32: Fix srl_read
  
  ** TCP: Fix infinite loop on connection lost


Summary of important user-visible changes for instrument-control 0.2.2:
-------------------------------------------------------------------

  ** GPIB: new function:
        fread

  ** SERIAL: Add pinstatus property
  
  ** SERIAL: Change display for serial object
  
  ** SERIAL: Fix MACOS compilation error

  ** Fix warnings when using Octave 4.0

